Refactored Database package. Added multithreading to ProductCrawler.