@@ -5,25 +5,36 @@ import org.jsoup.nodes.Document;
 import org.jsoup.select.Elements;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 
 /**
  * ShopScraper is responsible for connecting to a URL and scraping product data from it.
+ * It includes methods to validate a URL and to retrieve various product details like
+ * category, name, price, and properties from an Auchan product page.
  */
 public class ShopScraper {
+    // Constants for the CSS selectors used to extract product information.
+    private static final String AUCHAN_PRODUCT_CATEGORY_SELECTOR = ".vtex-breadcrumb-1-x-link.vtex-breadcrumb-1-x-link--productBreadcrumb.vtex-breadcrumb-1-x-link--3.vtex-breadcrumb-1-x-link--productBreadcrumb--3.dib.pv1.link.ph2.c-muted-2.hover-c-link";
+    private static final String AUCHAN_PRODUCT_NAME_SELECTOR = ".vtex-store-components-3-x-productBrand--productPage span".trim();
+    private static final String AUCHAN_PRODUCT_PRICE_SELECTOR = ".vtex-product-price-1-x-currencyContainer--pdp span";
+    private static final String AUCHAN_PRODUCT_PROPERTIES_SELECTOR = ".vtex-product-specifications-1-x-specificationValue.vtex-product-specifications-1-x-specificationValue--first.vtex-product-specifications-1-x-specificationValue--last";
+
     /**
-     * Checks if the given url is a valid URL.
+     * Validates the given URL.
+     * A URL is considered valid if it is well-formed and starts with http:// or https://.
      *
-     * @param url the url to validate
-     * @return true if the url is valid, false otherwise
+     * @param url the URL to validate
+     * @return true if the URL is valid, false otherwise
      */
-    static boolean isValidURL(String url) {
+    public static boolean isValidURL(String url) {
         try {
-            new URL(url).toURI();
-            return true;
-        } catch (MalformedURLException | URISyntaxException e) {
+            URI uri = new URI(url);
+            // URL should start with http:// or https://
+            if (uri.getScheme() == null) return false;
+            return uri.getScheme().equals("http") || uri.getScheme().equals("https");
+        } catch (URISyntaxException e) {
+            // if URL is not properly formed
             return false;
         }
     }
@@ -35,7 +46,8 @@ public class ShopScraper {
      * @return the product's category
      */
     static Elements getAuchanProductCategory(Document doc) {
-        return doc.select(".vtex-breadcrumb-1-x-link.vtex-breadcrumb-1-x-link--productBreadcrumb.vtex-breadcrumb-1-x-link--3.vtex-breadcrumb-1-x-link--productBreadcrumb--3.dib.pv1.link.ph2.c-muted-2.hover-c-link");
+        // use the category selector to extract the category from the document
+        return doc.select(AUCHAN_PRODUCT_CATEGORY_SELECTOR);
     }
 
     /**
@@ -45,29 +57,31 @@ public class ShopScraper {
      * @return the product's name
      */
     static Elements getAuchanProductName(Document doc) {
+        // Somehow the select doesn't work if I use constants.
         return doc.select(".vtex-store-components-3-x-productBrand--productPage").select("span");
     }
 
     /**
-     * Retrieves the price of a product from an Auchan product page.
+     * Retrieves and formats the price of a product from an Auchan product page.
      *
      * @param doc the HTML document of the product page
-     * @return the product's price
+     * @return the product's price as a string
      */
     static Elements getAuchanProductPrice(Document doc) {
-        return doc.select(".vtex-product-price-1-x-currencyContainer--pdp").select("span");
+        // use the price selector to extract the price from the document
+        return doc.select(AUCHAN_PRODUCT_PRICE_SELECTOR);
     }
 
-    /**
-     * Converts the price of a product from Elements to a String.
+    /***
+     * Retrieves and formats the price of a product from an Auchan product page.
      *
-     * @param price the price to convert
+     * @param price the price element from the product page
      * @return the product's price as a string
      */
     static String getAuchanProductPriceToString(Elements price) {
-        return price.get(1).text() + "." + price.get(3).text();
+        // format the price string
+        return price.text().replaceAll("[^0-9.]", "").trim();
     }
-
     /**
      * Retrieves the properties of a product from an Auchan product page.
      *
@@ -75,7 +89,8 @@ public class ShopScraper {
      * @return the product's properties
      */
     static Elements getAuchanProductProperties(Document doc) {
-        return doc.select(".vtex-product-specifications-1-x-specificationValue.vtex-product-specifications-1-x-specificationValue--first.vtex-product-specifications-1-x-specificationValue--last");
+        // use the properties selector to extract the product properties from the document
+        return doc.select(AUCHAN_PRODUCT_PROPERTIES_SELECTOR);
     }
 
     /**
@@ -86,6 +101,7 @@ public class ShopScraper {
      * @throws IOException if an error occurs during connection
      */
     Document connectToURL(String urlProduct) throws IOException {
+        // connect to the url and retrieve the document
         return Jsoup.connect(urlProduct).get();
     }
 }
